--- a/citations.bib
+++ b/citations.bib
@@ -1,27 +1,22 @@
-@article{dummypaper,
-	title = {Paper: This is the name of the paper },
-	volume = {99},
-	url = {https://some-link.com},
-	abstract = {},
-	number = {18},
-	journal = {Some Journal},
-	author = {Last Name, First Name and Other Last Name, First Name},
-	month = sep,
-	year = {2019},
-	keywords = {some keyword, another keyword},
-	pages = {2200--2300},
+@inproceedings{10.1145/3663976.3664235,
+author = {Morales, Irish Danielle and Echon, Carlo Joseph and Tea\~{n}o, Angelico Ruiz and Alampay, Raphael and Abu, Patricia Angela},
+title = {MobileLookNet: A Lightweight Convolutional Neural Network for Detection of Osseous Metastasis Using Feature Fusion and Attention Strategies},
+year = {2024},
+isbn = {9798400716607},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3663976.3664235},
+doi = {10.1145/3663976.3664235},
+booktitle = {Proceedings of the 2024 2nd Asia Conference on Computer Vision, Image Processing and Pattern Recognition},
+articleno = {55},
+numpages = {6},
+keywords = {bone scintigrams, convolutional neural networks, lightweight networks, metastasis},
+location = {Xiamen, China},
+series = {CVIPPR '24}
 }
 
-@article{dummypaper2,
-	title = {Paper II: This is another paper },
-	volume = {99},
-	url = {https://some-other-link.com},
-	abstract = {},
-	number = {18},
-	journal = {Some Journal},
-	author = {Last Name, First Name and Again Last Name, First Name},
-	month = sep,
-	year = {2022},
-	keywords = {some keyword, another keyword},
-	pages = {2200--2300},
+@article{aesapp,
+author = {Rodrigo, Maria Mercedes and Alampay, Liane Peña and Lee-Chua, Queena N., and Morales, Irish Danielle},
+title={An Experience Sampling Study of Student Emotional Life: Preliminary Results},
+url={https://library.apsce.net/index.php/ICCE/article/view/4999}, DOI={10.58459/icce.2024.4999}, journal={International Conference on Computers in Education}, year={2024}
 }
