Fix BlueDot Impact typo

--- a/cv.tex
+++ b/cv.tex
@@ -207,8 +207,8 @@
 \vspace{8pt}
 
 \begin{tabularx}{\linewidth}{ @{}l X r@{} }
-\textbf{In-Depth Effective Altruism – Moral Philosophy Track} & & \text{Mar 2024 - May 2024} \\[3.75pt]
-\textit{The Centre for Effective Altruism} & & \textit{Remote — Global} \\[3.75pt]
+\textbf{AI Safety Fundamentals - Technical Alignment Track} & & \text{Mar 2024 - May 2024} \\[3.75pt]
+\textit{BlueDot Impact} & & \textit{Remote — Global} \\[3.75pt]
 \multicolumn{3}{@{}l@{}}{
   \parbox{\linewidth}{
     On AI alignment, including reinforcement learning from human feedback, interpretability, and scalable oversight
