Add consultant experience

--- a/cv.tex
+++ b/cv.tex
@@ -244,6 +244,16 @@
 \section{Professional Experience}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{Independent Research Consultant} & \hfill \text{Jul 2025 - Dec 2025} \\ [3.75pt]
+\multicolumn{2}{@{}X@{}}{
+    \textit{Cavite National Science High School}
+    \begin{highlights}
+        \item Guide development of research in sign language-to-text ML model and application logic
+    \end{highlights}
+}
+\end{tabularx}
+
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{Founding Developer} & \hfill \text{Apr 2025 - Jul 2025} \\ [3.75pt]
 \multicolumn{2}{@{}X@{}}{
     \textit{Tenext.ai}
