feat: add research interests

--- a/cv.tex
+++ b/cv.tex
@@ -323,14 +323,6 @@
   }
 } \\
 \end{tabularx}
-  
-%Projects
-% \section{Independent Projects}
-
-% \begin{tabularx}{\linewidth}{ @{}l r@{} }
-% \textbf{Some Project} & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
-% \multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
-% \end{tabularx}
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
@@ -341,6 +333,11 @@ Languages &  \normalsize{Python, C++, TypeScript, SQL, LaTeX}\\
 Machine Learning &  \normalsize{PyTorch, Scikit-learn, Matplotlib, GNNs, CNNs, LLMs, RAG, STT, TTS}\\
 Tools  &  \normalsize{Git, Linux/Bash, Docker, Postman, AWS, Nginx, GitHub Actions}\\ 
 \end{tabularx}
+
+\section{Research Interests}
+\begin{itemize}[label={}, leftmargin=0in]
+    \item \small{Complex Systems, Computational Neuroscience, Emergent Algorithms, Spiking Neural Networks, Computational Complexity, Embodied Intelligence, Network Science, Optimization}
+\end{itemize}
 
 \vfill
 \center{\footnotesize Last updated: \today}
