fix: increase spacing after highlights

--- a/cv.tex
+++ b/cv.tex
@@ -122,8 +122,7 @@
         topsep=0.10 cm,
         parsep=0.10 cm,
         partopsep=0.10 cm,
-        leftmargin=1.2em,
-        after=\vspace{-\baselineskip}
+        leftmargin=1.2em
     ]
 }{
     \end{itemize}
