chore: reformat and fix typos

--- a/cv.tex
+++ b/cv.tex
@@ -170,18 +170,22 @@
 %----------------------------------------------------------------------------------------
 \section{Education}
 
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Ateneo de Manila University} & \hfill \text{2024} \\ [3.75pt]
+\begin{tabularx}{\linewidth}{ @{}X r @{} }
+\textbf{Ateneo de Manila University} & 2024 \\ [3.75pt]
 \multicolumn{2}{@{}X@{}}{
-    \textit{BS Computer Science (Specialization in Data Science and Analytics)}
-    \begin{highlights}
-        \item Top program graduate based on academics and extracurriculars (Program Award)
-        \item GPA: 3.83/4.00, Director's List Scholar (Top 1.5\% of applicants), 100\% Financial Aid Scholar
-    \end{highlights}
+    \textit{BS Computer Science (Specialization in Data Science and Analytics)} \newline
+    Top graduate, GPA: 3.83, Director's List Scholar (Top 1.5\% of applicants), 100\% Financial Aid Scholar
 }
 \end{tabularx}
 
 \section{Awards}
+
+\begin{tabularx}{\linewidth}{ @{}X r@{} }
+\textbf{Program Award (Top Graduate)}, \textit{Ateneo de Manila University} & June 2025 \\ [3.75pt]
+\multicolumn{2}{@{}p{\linewidth}@{}}{
+    Top program graduate of BS Computer Science based on academics, extracurriculars, and service
+}
+\end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X r@{} }
 \textbf{University Scholarly Work Award}, \textit{Ateneo de Manila University} & May 2025 \\ [3.75pt]
@@ -229,7 +233,7 @@
     \multicolumn{2}{@{}X@{}}{
         \textit{Ateneo Laboratory for Intelligent Visual Environment}
         \begin{highlights}
-            \item Developing a clinical decision support platform deploying medical imaging models (specialized YOLO, U-Net, \& CNN-based architectures) for medical professional training in bone scintigraphy analysis
+            \item Developing a clinical decision support platform deploying medical imaging models (YOLO, U-Net, \& CNN-based architectures) for medical professional training in bone scintigraphy analysis
         \end{highlights}
     }
 \end{tabularx}
@@ -245,7 +249,7 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Research Assistant} & \hfill \text{Jan 2023 - Jun 2023} \\ [3.75pt]
+\textbf{Research Assistant} & \hfill \text{Jan 2023 - Dec 2024} \\
 \multicolumn{2}{@{}X@{}}{
     \textit{Ateneo Laboratory for the Learning Sciences}
     \begin{highlights}
@@ -281,12 +285,12 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Full Stack Developer} & \hfill \text{Jun 2023 - Dec 2024} \\ [3.75pt]
+\textbf{Full Stack Developer} & \hfill \text{Jun 2023 - Dec 2024} \\
 \multicolumn{2}{@{}X@{}}{
     \textit{Hackazouk}
     \begin{highlights}
         \item Led development of distributed syncing engine for 150+ tables for microservice finance system with 15,000+ users
-        \item Fast-tracked from intern to developer within 2 months (vs. 6-month standard); entrusted with technical project leadership of a 5-developer team on a CCTV footage analysis platform
+        \item Fast-tracked from intern to developer within 2 months (vs. 6-month standard); entrusted with technical project leadership of a 5-developer team
     \end{highlights}
 }
 \end{tabularx}
@@ -328,14 +332,14 @@
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Languages &  \normalsize{Python, C++, TypeScript, SQL, LaTeX}\\
-Machine Learning &  \normalsize{PyTorch, Scikit-learn, Matplotlib, GNNs, CNNs, LLMs, RAG, STT, TTS}\\
+Programming \& Data &  \normalsize{Python, C++, TypeScript, SQL, LaTeX, NumPy, Pandas, Scikit-learn, Matplotlib}\\
+ML/AI &  \normalsize{PyTorch, GNNs, CNNs, LLMs, RAG, STT, TTS}\\
 Tools  &  \normalsize{Git, Linux/Bash, Docker, Postman, AWS, Nginx, GitHub Actions}\\ 
 \end{tabularx}
 
 \section{Research Interests}
 \begin{itemize}[label={}, leftmargin=0in]
-    \item \small{Complex Systems, Computational Neuroscience, Emergent Algorithms, Spiking Neural Networks, Computational Complexity, Embodied Intelligence, Network Science, Optimization}
+    \item \small{Complex systems, computational neuroscience, embodied intelligence, biologically plausible learning algrithms, optimization}
 \end{itemize}
 
 \vfill
